# demodulator

./: .gitignore  CMakeLists.txt  NewSession1.nvvp  README.md  cmake_build.sh  example.sh  multimon-example.sh  oldTest.sh  plot.py  rtltcp-to-udp.py  rtltcp.py  run-qemu-user-aarch64.sh  run-qemu-user-armhf.sh  test.sh
arm_asm/: arm_main.c  demod.S  fmDemod.S  header.S
asm/: complex_conjugate.S  demod.S  filter.S  fm_demod.S  header.S  matrix.S  raw_dc_filter.S
cmake/Modules/: TargetArch.cmake
cuda/: cuc_matrix.cu  main.cu  matrix.cu  matrix.cuh
include/: asm.h  c_main.h  definitions.h  demodulator.h  filter.h  fmath.h  matrix.cuh  matrix.h  nvidia.cuh  prototypes.h
intrinsics/intel/: matrix.c  mm512_matrix.c  natrix.c  new_matrix.c  old_matrix.c  old_mm512_matrix.c  pthread_matrix.c  reference_mm512_matrix.c
intrinsics/neon/: matrix.c
mathematica/: bw.nb  cheby1.nb  fmdemod.nb  fmmod.nb
src/: arm_main.c  c_main.c  filter.c  fmath.c  main.c  matrix.c  reference_matrix.c
